--- a/src/components/sidebar/Header.css
+++ b/src/components/sidebar/Header.css
@@ -6,14 +6,14 @@
     height: 100vh;
   }
   #header .closemenu {
-    color: #000;
+    color: rgb(88, 84, 84);
     position: absolute;
     right: 0;
     z-index: 9999;
-    line-height: 20px;
+    line-height: 680px;
     border-radius: 50%;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 25px;
     top: 55px;
     cursor: pointer;
   }
@@ -57,9 +57,15 @@
   #header .pro-sidebar-inner .pro-sidebar-layout .active {
     background-image: linear-gradient(0deg, #94afe7 0%, #72deff 100%);
   }
-  #header .logo {
-    padding: 20px;
-  }
+  
+  .logotext{
+    width: 30px;
+    height: 70px;
+  }  
+  
+  
+
+  
   
   @media only screen and (max-width: 720px) {
     html {
