--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
  .App{
      width: 100vw;
     height: 100vh;
-    background-color: rgb(255, 255, 255);
+    overflow-y: hidden;
+    overflow-x: hidden;
+  
+    
  }
 
  body{
      margin: 0;
+     padding: 0%;
+     
  }
 
  
