--- a/src/components/Graphs/Attendance/Attendance.css
+++ b/src/components/Graphs/Attendance/Attendance.css
@@ -1,20 +1,96 @@
-.w3-col.l4{width:45.33333%}
-.w3-col.s12{width:66.66666%}
+.AT-col.l4{
+    width:45.33333%;
+    bottom: 1cm;
+}
 
-ul{float:right;list-style-type:none;margin-top:10px;}
+.AT-content{
+    margin-left:10cm;
+    margin-right:auto;
+    max-width:500px;
+}
 
-.w3-card{box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)}
+.AT-margin-top{
+    margin-top:16px
+}
 
-.w3-margin{margin:10px;border-radius: 10px}.w3-margin-top{margin-top:16px}
 
-.w3-white{color:#000;background-color:#fff}
+.AT-margin-left{
+    margin-left:16px;
+}
+    
+.AT-margin-right{
+    margin-right:16px;
+}
 
-.w3-container{padding:0.01em 16px;border-radius: 15px;background-color: white;top:250px;left:600px}
-.w3-container:after,.w3-container:before,.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
+.AT-row:after,.AT-row:before{
+    content:"";
+    display:table;
+    clear:both
+}
 
-.container {border-radius: 5px;background-color:white;padding: 30px;left:15px;}
-.w3-margin-left{margin-left:16px}.w3-margin-right{margin-right:16px}
+.chart{
+    bottom:2cm;
+    margin-bottom:50px;
+}
+.AT-card1{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:23%;
+    left: 223px;
+    top:-660px;
+    position: relative;
+}
+.AT-card2{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:23%;
+    left: 664px;
+    top:-900px;
+    position: relative;
+}
+.AT-card3{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:23%;
+    left: 1087px;
+    top:-1139px;
+    position: relative;
+}
+.AT-card4{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:23%;
+    left: 225px;
+    top:-1139px;
+    position: relative;
+}
+.AT-card5{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:23%;
+    left: 661px;
+    top:-1377px;
+    position: relative;
+}
+.AT-card6{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:23%;
+    left: 1087px;
+    top:-1618px;
+    position: relative;
+}
 
-.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
-.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
-.chart{bottom:20px;margin-bottom:20px}
+.AT-margin{
+    margin:10px;
+    border-radius:10px;
+}
+.AT-margin-top{
+    margin-top:16px;
+}
+
+.AT-white{
+    color:#000;
+    background-color:#fff;
+}
+
+.AT-container{
+    padding:0.01em 16px;
+    border-radius: 15px;
+    background-color: white;
+    top:250px;left:100px;
+}
