--- a/src/Pages/HOD/Yearcard.css
+++ b/src/Pages/HOD/Yearcard.css
@@ -1,23 +1,60 @@
-.yearcard{
-    position:absolute ;
-   top: 90px;
-   left: 400px;
-   
+.yearcard_main{
+    position:relative ;
+    top: -725px;
+   left: 350px;
 }
 
 
 
-.card{
+.yearcard{
     text-align: center;
     padding-top: 5px;
      
 }
- .button{
+ .yearbutton{
       padding: 2px 5px;
   }
-  .button:hover{
+   .year_button{
+      padding: 2px 5px;
+  }
+  .yearbutton:hover{
       background-color: rgb(78, 118, 226);
   }
+  .year_button{
+      background-color: rgb(78, 118, 226);
+  }
+
+  .yearbutton-36 {
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 2rem;
+  padding: 0 1.6rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.yearbutton-36:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+
+@media (min-width: 768px) {
+  .yearbutton-36 {
+    padding: 0 1rem;
+  }
+}
 
 
 
