--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -61,7 +61,7 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #4e79d4;
   text-decoration: none;
 }
 .form .register-form {
