--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-.card1{
+.counsellor_card1{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -6,7 +6,7 @@
     top: 200px;
     display: inline-block;
 }
-.card2{
+.counsellor_card2{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -14,7 +14,7 @@
     top: 200px;
     display: inline-block;
 }
-.card3{
+.counsellor_card3{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -23,7 +23,7 @@
     display: inline-block;
 }
 
-.card4{
+.counsellor_card4{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -32,7 +32,7 @@
     display: inline-block;
 }
 
-.card5{
+.counsellor_card5{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -40,7 +40,7 @@
     top: 450px;
     display: inline-block;
 }
-.card6{
+.counsellor_card6{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -48,7 +48,7 @@
     top: 450px;
     display: inline-block;
 }
-.card7{
+.counsellor_card7{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -57,7 +57,7 @@
     display: inline-block;
 }
 
-.card8{
+.counsellor_card8{
      position: absolute;
     width: 225px;
     height: 189px;
@@ -66,7 +66,7 @@
     display: inline-block;
 }
 
-.cards {
+.counsellor_cards {
   white-space: nowrap;
   overflow-x: hidden;
   overflow-y: hidden;
