--- a/src/components/Graphs/Internal1/Internal1.css
+++ b/src/components/Graphs/Internal1/Internal1.css
@@ -1,20 +1,45 @@
-.w3-col.l4{width:66.33333%}
-.w3-col.s12{width:66.66666%}
+.I1-col.l4{
+    width:99.99999%;
+    
+}
 
-ul{float:right;list-style-type:none;margin-top:10px;}
+.I1-container:after,.I1-container:before,.I1-row:after,.I1-row:before{
+    content:"";
+    display:table;
+    clear:both;
+}
 
-.w3-card{box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)}
+.I1-margin-left{
+    margin-left:16px;
+}
+.I1-margin-right{
+    margin-right:16px;
+}
 
-.w3-margin{margin:10px;border-radius: 10px}.w3-margin-top{margin-top:16px}
+.chart{
+    bottom:20px;
+    margin-bottom:20px;
+}
+.I1-card{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:33.33333%;
+    
+}
 
-.w3-white{color:#000;background-color:#fff}
+.I1-margin{
+     margin-top: 10px;
+    border-radius:10px;
+}
 
-.w3-container{padding:0.01em 16px;border-radius: 15px;background-color: white;top:250px;left:600px}
-.w3-container:after,.w3-container:before,.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
 
-.container {border-radius: 5px;background-color:white;padding: 30px;left:15px;}
-.w3-margin-left{margin-left:16px}.w3-margin-right{margin-right:16px}
+.I1-white{
+    color:#000;
+    background-color:#fff;
+}
 
-.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
-.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
-.chart{bottom:20px;margin-bottom:20px}
+.I1-container{
+    padding:0.01em 16px;
+    border-radius: 15px;
+    background-color: white;
+    top:250px;left:100px;
+}
