--- a/src/components/Graphs/Internal2/Internal2.css
+++ b/src/components/Graphs/Internal2/Internal2.css
@@ -1,20 +1,59 @@
-.w3-col.l4{width:45.33333%}
-.w3-col.s12{width:45.66666%}
+.I2-col.l4{
+    width:99.99999%;
+}
 
-ul{float:right;list-style-type:none;margin-top:10px;}
 
-.w3-card{box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)}
+.I2-card{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    width:33.33333%;
+    left: 900px;
+    top: -1020px;
+    position: relative;
+}
 
-.w3-margin{margin:10px;border-radius: 10px}.w3-margin-top{margin-top:16px}
+.I2-margin{
+    margin-top: 10px;
+    border-radius:10px;
+}
 
-.w3-white{color:#000;background-color:#fff}
 
-.w3-container{padding:0.01em 16px;border-radius: 15px;background-color: white;top:250px;left:600px}
-.w3-container:after,.w3-container:before,.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
+.I2-white{
+    color:#000;
+    background-color:#fff;
+}
 
-.container {border-radius: 5px;background-color:white;padding: 30px;left:25px;}
-.w3-margin-left{margin-left:16px}.w3-margin-right{margin-right:16px}
+.I2-container{
+    padding:0.01em 16px;
+    border-radius: 15px;
+    background-color: white;
+     top:250px;left:100px;
+}
+.I2-container:after,.I2-container:before,.I2-row:after,.I2-row:before{
+    content:"";
+    display:table;
+    clear:both;
+}
+.I2-content{
+    margin-left:10cm;
+    margin-right:auto;
+}
+  .I2-content{
+      max-width:500px;
+    }
+.container {
+    border-radius: 5px;
+    background-color:white;
+    padding: 30px;
+    left:25px;
+}
+.I2-margin-left{
+    margin-left:16px;
+}
+.I2-margin-right{
+    margin-right:16px;
+}
 
-.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
-.w3-row:after,.w3-row:before{content:"";display:table;clear:both}
-.chart{bottom:10px;margin-bottom:20px}
+.chart{
+    bottom:10px;
+    margin-bottom:20px;
+}
