--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -107,3 +107,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
+
+.log_button{
+  border-radius: 20px;
+}
