--- a/src/components/Graphs/Attendance/Attendance.css
+++ b/src/components/Graphs/Attendance/Attendance.css
@@ -1,96 +1,105 @@
-.AT-col.l4{
-    width:45.33333%;
+.AT-col.l4 {
+    width: 45.33333%;
     bottom: 1cm;
 }
 
-.AT-content{
-    margin-left:10cm;
-    margin-right:auto;
-    max-width:500px;
+.AT-content {
+    margin-left: 10cm;
+    margin-right: auto;
+    max-width: 500px;
 }
 
-.AT-margin-top{
-    margin-top:16px
+.AT-margin-top {
+    margin-top: 16px
 }
 
 
-.AT-margin-left{
-    margin-left:16px;
-}
-    
-.AT-margin-right{
-    margin-right:16px;
+.AT-margin-left {
+    margin-left: 16px;
 }
 
-.AT-row:after,.AT-row:before{
-    content:"";
-    display:table;
-    clear:both
+.AT-margin-right {
+    margin-right: 16px;
 }
 
-.chart{
-    bottom:2cm;
-    margin-bottom:50px;
+.AT-row:after,
+.AT-row:before {
+    content: "";
+    display: table;
+    clear: both
 }
-.AT-card1{
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    width:23%;
+
+.chart {
+    bottom: 2cm;
+    margin-bottom: 50px;
+}
+
+.AT-card1 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    width: 23%;
     left: 223px;
-    top:-660px;
+    top: -700px;
     position: relative;
 }
-.AT-card2{
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    width:23%;
+
+.AT-card2 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    width: 23%;
     left: 664px;
-    top:-900px;
+    top: -940px;
     position: relative;
 }
-.AT-card3{
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    width:23%;
+
+.AT-card3 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    width: 23%;
     left: 1087px;
-    top:-1139px;
+    top: -1180px;
     position: relative;
 }
-.AT-card4{
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    width:23%;
+
+.AT-card4 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    width: 23%;
     left: 225px;
-    top:-1139px;
+    top: -1180px;
     position: relative;
 }
-.AT-card5{
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    width:23%;
-    left: 661px;
-    top:-1377px;
+
+.AT-card5 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    width: 23%;
+    left: 665px;
+    top: -1418px;
     position: relative;
 }
-.AT-card6{
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    width:23%;
+
+.AT-card6 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    width: 23%;
     left: 1087px;
-    top:-1618px;
+    top: -1658px;
     position: relative;
 }
 
-.AT-margin{
-    margin:10px;
-    border-radius:10px;
-}
-.AT-margin-top{
-    margin-top:16px;
+.AT-margin {
+    margin: 10px;
+    border-radius: 10px;
 }
 
-.AT-white{
-    color:#000;
-    background-color:#fff;
+.AT-margin-top {
+    margin-top: 16px;
 }
 
-.AT-container{
-    padding:0.01em 16px;
+.AT-white {
+    color: #000;
+    background-color: #fff;
+}
+
+.AT-container {
+    padding: 0.01em 16px;
     border-radius: 15px;
     background-color: white;
-    top:250px;left:100px;
+    top: 250px;
+    left: 100px;
 }
