--- a/src/components/List/Form.css
+++ b/src/components/List/Form.css
@@ -82,6 +82,29 @@
   position: relative;
 }
 
+
+.single_sub2 {
+  font-family: arial, sans-serif;
+  left: 417px;
+  top: -680px;
+  width: 20cm;
+  border: 1px solid rgb(247, 245, 245);
+  text-align: center;
+  padding: 14px 28px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  position: relative;
+}
+.single_sub3 {
+  font-family: arial, sans-serif;
+  left: 417px;
+  top: -680px;
+  width: 20cm;
+  border: 1px solid rgb(247, 245, 245);
+  text-align: center;
+  padding: 14px 28px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  position: relative;
+}
 .stud_weak {
   font-family: arial, sans-serif;
   left: 1060px;
@@ -119,7 +142,7 @@
 .stud_bright2 {
   font-family: arial, sans-serif;
   left: 1061px;
-  top: -1374px;
+  top: -1369px;
   width: 10cm;
   border: 1px solid rgb(255, 254, 254);
   text-align: center;
